# CMakeProject1

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
CMakeProject1/: CMakeLists.txt  CMakeProject1.cpp  CMakeProject1.h
installer/: CalculatorApp.wixproj  CalculatorcplusApp.wixpdb  calculcatorcplusapp-wxsbkp  calculcatorcplusapp.wxs  main.wxs  product.wxs
